--- a/public/home.html
+++ b/public/home.html
@@ -28,7 +28,7 @@
             <span>Sample Content Output: </span><span id="sampleContent_Output"></span>
             <p>Pizza (Italian: [ˈpittsa], Neapolitan: [ˈpittsə]) is a savory dish of Italian origin consisting of a usually round, flattened base of leavened wheat-based dough topped with tomatoes, cheese, and often various other ingredients (such as anchovies, mushrooms, onions, olives, pineapple, meat, etc.), which is then baked at a high temperature, traditionally in a wood-fired oven.[1] A small pizza is sometimes called a pizzetta. A person who makes pizza is known as a pizzaiolo.
 
-              In Italy, pizza served in formal settings, such as at a restaurant, is presented unsliced, and is eaten with the use of a knife and fork.[2][3] In casual settings, however, it is cut into wedges to be eaten while held in the hand.
+              In Italy, pizza pizza served in formal settings, such as at a restaurant, is presented unsliced, and is eaten with the use of a knife and fork.[2][3] In casual settings, however, it is cut into wedges to be eaten while held in the hand.
               
               The term pizza was first recorded in the 10th century in a Latin manuscript from the Southern Italian town of Gaeta in Lazio, on the border with Campania.[4] Modern pizza was invented in Naples, and the dish and its variants have since become popular in many countries.[5] It has become one of the most popular foods in the world and a common fast food item in Europe and North America, available at pizzerias (restaurants specializing in pizza), restaurants offering Mediterranean cuisine, and via pizza delivery.[5][6] Many companies sell ready-baked frozen pizzas to be reheated in an ordinary home oven.
               
@@ -39,7 +39,7 @@
 
 
 
-  <!--TRANSLATION BOX-->
+  <!--TRANSLATION BOX-------------------------------------------------->
   <div>
     <form>
         <fieldset>
@@ -60,7 +60,7 @@
 
 
 
-  <!--WORD COUNT BOX-->
+  <!--WORD COUNT BOX------------------------------------------------------>
   <div>
     <form>
         <fieldset>
