--- a/public/home.html
+++ b/public/home.html
@@ -18,7 +18,7 @@
     <div>
     <form>
         <fieldset>
-            <legend>Get Sample Content</legend>
+            <legend>Get Sample Content (Uses Teamate's scraper services)</legend>
         <p>Instructions: If you want sample content, enter a word and click "Click Here for Sample Output". Sample Content will be printed to the screen. If you already have content, you can skip this step</p>
               <label>Enter a Word: 
                 <input type="text" id="sampleContent_input" size="25" maxlength="75" placeholder="Enter Word">
@@ -39,7 +39,7 @@
   <div>
     <form>
         <fieldset>
-            <legend>Translate Text</legend>
+            <legend>Translate Text (Uses my transformation service)</legend>
         <p>Instructions: If you need to translate your content to English, enter content (in any language) into the text box and press "Click Here for Translated Text". If you do not have to translate content, you can skip this step</p>
               <label>Enter some Text: 
                 <input type="text" id="translation_input" size="25" maxlength="5000000" placeholder="Translation Text">
@@ -73,6 +73,7 @@
             <span>Word Count Output: </span><span id="analyze_Output"></span>
     </form>
     </div>
+   
 
 
     <script src="scripts.js"></script>
