Code Smells Updates

--- a/public/home.html
+++ b/public/home.html
@@ -17,11 +17,11 @@
   </h3>
 
 
-    <!--GET SAMPLE CONTENT BOX-->
+    <!--GET SAMPLE CONTENT BOX------------------------------------>
     <div>
     <form>
         <fieldset>
-            <legend>Get Sample Content (Uses Teamate's scraper services)</legend>
+            <legend>Get Sample Content</legend>
         <p>Instructions: If you want sample content, enter a word and click "Click Here for Sample Output". Sample Content will be printed to the screen. <u>If you already have content, you can skip this step</u></p>
         <p>Benefits & Costs: The section allows you to easily get sample content to test in the word count section below. However this content is only useful for testing, for more relevant content you should provide your own. </p>
               <label>Enter a Word: 
@@ -45,7 +45,7 @@
   <div>
     <form>
         <fieldset>
-            <legend>Translate Text (Uses my transformation service)</legend>
+            <legend>Translate Text</legend>
         <p>Instructions: If you need to translate your content to English, enter content (in any language) into the text box and press "Click Here for Translated Text". <u>If you already have content, you can skip this step</u></p>
         <p>Benefits & Costs: If you have content in any language we can translate it to english for you so you can analyze the english content below. However there is always a risk that meaning is lost in translation.</p>
               <label>Enter some Text: 
