added text cleaner

--- a/public/home.html
+++ b/public/home.html
@@ -74,6 +74,7 @@
                 <input type="text" id="analyze_input" size="25" maxlength="5000000" placeholder="Analyze Text">
               </label>
               <input type="submit" onclick="return confirm('Are you Sure?--Remember to copy any data you want below first')" id="analyze_submit" value="Click Here for Word Counts"/>
+              <input type="submit" onclick="return confirm('Are you Sure?--Remember to copy any data you want below first')" id="analyze_submit_clean" value="Click Here for CLEANED Text" />
             </br>
           </br>
             </fieldset>
